--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,8 +2,12 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: "Dongle", sans-serif;
+  font-size: 30px;
+}
+
+body {
+  padding: 0 200px;
 }
 
 a {
